--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -12,16 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
-      - uses: actions/checkout@v3
+      # Step 1: Checkout the repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      # Set up Python
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      # Install Python dependencies
+      # Step 2.5: Install Python dependencies
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -41,18 +42,20 @@ jobs:
 
   deploy:
     name: Deploy & Push to Docker Hub
-    needs: [backend_flask]
+    needs: [backend_flask]  # Ensures the backend job passes before deploying
     runs-on: ubuntu-latest
-    environment: TEST  # Make sure TEST is added as a GitHub environment
+    environment: TEST  # Important: Create a GitHub environment called "TEST"
 
     steps:
-      - uses: actions/checkout@v3
+      # Step 5: Checkout the repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      # Optional: List repository files to verify the docker-compose file exists
-      - name: List repository files
+      # Step 6: Optional - List repository files to verify the docker-compose file exists
+      - name: List Repository Files
         run: ls -al
 
-      # Step 7: Build docker image
+      # Step 7: Build Docker Image
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest .
 
@@ -60,6 +63,6 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-      # Step 9: Push docker image to dockerhub
+      # Step 9: Push Docker Image to Docker Hub
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
