--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -12,57 +12,54 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      # Checkout the repository
+      - uses: actions/checkout@v3
 
-      # Step 2: Set up Python
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      # Step 2.5: Install Python dependencies
+      # Install Python dependencies
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # Step 3: Lint Python code
-      - name: Lint Python code
-        run: |
-          pip install flake8
-          flake8 .
+      #### 
 
       # Step 4: Run Python tests
-      - name: Run Python tests
-        run: |
-          pip install pytest
-          pytest
+      ####
 
   deploy:
     name: Deploy & Push to Docker Hub
-    needs: [backend_flask]  # Ensures the backend job passes before deploying
+    needs: [backend_flask]
     runs-on: ubuntu-latest
-    environment: TEST  # Important: Create a GitHub environment called "TEST"
-
+    # Important step - add your environment name
+    # environment: PROD
     steps:
-      # Step 5: Checkout the repository
-      - name: Checkout Code
-        uses: actions/checkout@v3
+        - uses: actions/checkout@v3
 
-      # Step 6: Optional - List repository files to verify the docker-compose file exists
-      - name: List Repository Files
-        run: ls -al
+        # Optional: List repository files to verify the docker-compose file exists
+        - name: List repository files
+          run: ls -al
 
-      # Step 7: Build Docker Image
-      - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest .
+    # Step 7: Build docker image 
+    # Go to dockerhub.com
+    # Create a new repository - backend_flask
+    # Create a new access token - <access_token>
+    # Note down your username - <username>
+    # Add the following secrets to your GitHub repository - Environment (name = TEST)
+    # add the Environment name to the deploy job above (important step)
+    # https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions
+    #### 
 
-      # Step 8: Log in to Docker Hub
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+    # Step 8: # Log in to Docker Hub
+    #### 
 
-      # Step 9: Push Docker Image to Docker Hub
-      - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
+
+    # Step 8: Push docker image to dockerhub
+    ####
+    
