--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -28,10 +28,22 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # Step 3: Lint Python code
-      #### 
+      - name: Lint Python code
+        run: |
+          if [ -f .flake8 ] || [ -f setup.cfg ] || [ -f tox.ini ] || [ -f .pep8 ]; then
+            flake8 .
+          else
+            echo "No lint configuration found, skipping linting."
+          fi
 
       # Step 4: Run Python tests
-      ####
+      - name: Run Python tests
+        run: |
+          if [ -f pytest.ini ] || ls tests; then
+            pytest
+          else
+            echo "No tests found, skipping tests."
+          fi
 
   deploy:
     name: Deploy & Push to Docker Hub
@@ -46,7 +58,12 @@ jobs:
         - name: List repository files
           run: ls -al
 
-    # Step 7: Build docker image 
+    # Step 7: Build docker image
+        - name: Build Docker Image
+          run: |
+            docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest .
+            # make sure that your dockerhub repo name matches as this line (backend_flask)
+ 
     # Go to dockerhub.com
     # Create a new repository - backend_flask
     # Create a new access token - <access_token>
